--- a/POO2_Ex9.csproj
+++ b/POO2_Ex9.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <Compile Remove="Mail\MailValidator.cs" />
+      <Compile Remove="Server\MailObserver.cs"/>
     </ItemGroup>
 
 </Project>
